[tool.poetry]
name = "manga109"
version = "0.1.0"
description = "A type-based API client for Manga109"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
xmltodict = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
